[gd_scene load_steps=3 format=3 uid="uid://cf1a4xmw731qo"]

[ext_resource type="Script" path="res://scenes/newLeaderScreen.gd" id="1_jxsny"]
[ext_resource type="PackedScene" uid="uid://bj5yfd4huc0bl" path="res://scenes/catPortrait.tscn" id="2_3mhf7"]

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jxsny")

[node name="DEBUGDELETELATER_GENETICCODE" type="Label" parent="Control"]
layout_mode = 0
offset_left = 342.0
offset_top = 150.0
offset_right = 434.0
offset_bottom = 173.0
text = "0000000000"

[node name="newLeader_AllegianceDescription_Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 382.0
offset_top = 260.0
offset_right = 777.0
offset_bottom = 283.0
text = "A grey tabby tom"

[node name="newLeaderExplanation_Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 6.0
offset_top = 19.0
offset_right = 1141.0
offset_bottom = 42.0
text = "Design your starting leader"
horizontal_alignment = 1

[node name="newLeaderName_Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1.0
offset_top = 44.0
offset_right = 1155.0
offset_bottom = 86.0
theme_override_font_sizes/font_size = 30
text = "Asterstar"
horizontal_alignment = 1
vertical_alignment = 1

[node name="userInsertNewLeaderPrefix_TextEdit" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 515.0
offset_top = 313.0
offset_right = 663.0
offset_bottom = 344.0
text = "Aster"

[node name="newLeader_pickSex_Dropdown" type="OptionButton" parent="Control"]
layout_mode = 0
offset_left = 513.0
offset_top = 370.0
offset_right = 669.0
offset_bottom = 405.0
selected = 0
item_count = 2
popup/item_0/text = "Male"
popup/item_0/id = 0
popup/item_1/text = "Female"
popup/item_1/id = 1

[node name="newLeader_pickIfTabby_Dropdown" type="OptionButton" parent="Control"]
layout_mode = 0
offset_left = 516.0
offset_top = 482.0
offset_right = 672.0
offset_bottom = 517.0
selected = 1
item_count = 2
popup/item_0/text = "Solid"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = "Tabby"
popup/item_1/id = 1

[node name="newLeader_pickColour_Dropdown" type="OptionButton" parent="Control"]
layout_mode = 0
offset_left = 518.0
offset_top = 423.0
offset_right = 674.0
offset_bottom = 458.0
selected = 1
item_count = 12
popup/item_0/text = "Black"
popup/item_0/id = 0
popup/item_1/text = "Grey"
popup/item_1/id = 1
popup/item_2/text = "Chocolate"
popup/item_2/id = 2
popup/item_3/text = "Cinnamon"
popup/item_3/id = 3
popup/item_4/text = "Lilac"
popup/item_4/id = 4
popup/item_5/text = "Fawn"
popup/item_5/id = 5
popup/item_6/text = "Ginger"
popup/item_6/id = 6
popup/item_7/text = "Cream"
popup/item_7/id = 7
popup/item_8/text = "Black-red tortie"
popup/item_8/id = 8
popup/item_8/disabled = true
popup/item_9/text = "Brown-red tortie"
popup/item_9/id = 9
popup/item_9/disabled = true
popup/item_10/text = "Grey-cream tortie"
popup/item_10/id = 10
popup/item_10/disabled = true
popup/item_11/text = "Grey-lilac tortie"
popup/item_11/id = 11
popup/item_11/disabled = true

[node name="explain_insertNewLeaderPrefix_Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 379.0
offset_top = 319.0
offset_right = 499.0
offset_bottom = 347.0
text = "Prefix?"
autowrap_mode = 3

[node name="explain_changeNewLeaderSex_Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 379.0
offset_top = 367.0
offset_right = 499.0
offset_bottom = 396.0
text = "Sex?"
autowrap_mode = 3

[node name="explain_changeNewLeaderColour_Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 374.0
offset_top = 426.0
offset_right = 494.0
offset_bottom = 452.0
text = "Coat colour?"
autowrap_mode = 3

[node name="explain_isLeaderTabby_Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 374.0
offset_top = 488.0
offset_right = 494.0
offset_bottom = 514.0
text = "Tabby?"
autowrap_mode = 3

[node name="explain_chooseLeaderWhiteness_Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 375.0
offset_top = 541.0
offset_right = 495.0
offset_bottom = 567.0
text = "Whiteness?"
autowrap_mode = 3

[node name="describeNewLeader_Label" type="Label" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="confirmPrefix_Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 689.0
offset_top = 313.0
offset_right = 781.0
offset_bottom = 344.0
text = "Confirm"

[node name="confirmSex_Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 689.0
offset_top = 371.0
offset_right = 781.0
offset_bottom = 402.0
text = "Confirm"

[node name="confirmColour_Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 690.0
offset_top = 426.0
offset_right = 782.0
offset_bottom = 457.0
text = "Confirm"

[node name="confirmIfTabby_Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 690.0
offset_top = 485.0
offset_right = 782.0
offset_bottom = 516.0
text = "Confirm"

[node name="confirmWhiteness_Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 691.0
offset_top = 542.0
offset_right = 783.0
offset_bottom = 573.0
text = "Confirm"

[node name="leaderIsNowReady_Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 870.0
offset_top = 606.0
offset_right = 1142.0
offset_bottom = 637.0
text = "I'm ready to play. Save this leader!"

[node name="whitenessSlider_Slider" type="HSlider" parent="Control"]
layout_mode = 0
offset_left = 521.0
offset_top = 547.0
offset_right = 664.0
offset_bottom = 563.0
max_value = 9.0

[node name="catPortrait_LeaderInstance" parent="Control" instance=ExtResource("2_3mhf7")]
position = Vector2(516, 109)
scale = Vector2(2.33, 2.33)

[connection signal="pressed" from="Control/confirmPrefix_Button" to="Control" method="_newLeader_on_setNewPrefix_button_pressed"]
[connection signal="pressed" from="Control/confirmSex_Button" to="Control" method="_on_confirmSex_button_pressed"]
[connection signal="pressed" from="Control/confirmColour_Button" to="Control" method="_on_confirmColour_button_pressed"]
[connection signal="pressed" from="Control/confirmIfTabby_Button" to="Control" method="_on_confirm_ifTabby_button_pressed"]
[connection signal="pressed" from="Control/confirmWhiteness_Button" to="Control" method="_on_confirm_whiteness_button_pressed"]
[connection signal="pressed" from="Control/leaderIsNowReady_Button" to="Control" method="_on_leaderIsNowReady_button_pressed"]
